--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,16 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .container-bau {
-    position: relative;
-    width: 50%;
-  }
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
   
 
 .container-bau #bau {
@@ -56,4 +60,12 @@ body{
 .particulaItemSpawn{
     width: 4vh;
     height: 4vh;
+}
+
+canvas {
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
